--- a/new1.html
+++ b/new1.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project1</title>
+    <title>tron vn</title>
 </head>
 
 <body>
-    <h1>Tu nay anh mat em roi</h1>
-    <h2>vo tan</h2>
-    <h3>cuoi len em </h3>
+    <h1>news</h1>
 </body>
 
 </html>
